[package]
name = "someipsd"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
ansi_term = "0.12"
colored = "2.0"
someip_parse = { git = "https://github.com/marcelbuesing/someip-parse-rs.git", branch = "service-discovery" }
structopt = "0.3"
tokio = { version = "1.14", features = ["net", "macros", "rt-multi-thread"] }
